Tomcat to wildfly (#2)
* work

* wildfly

* wildfly configuration

* git ignore add resource folder and add properties to pom.xml

Co-authored-by: KanekiSenapi <v.kaneki.senpai@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /dist
 /tmp
 /out-tsc
+/src/main/webapp/resources/
+
 # Only exists if Bazel was run
 /bazel-out
 
@@ -44,3 +46,19 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+### Maven template
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+
+# IntelliJ
+out/
