--- a/.github/workflows/onPushMaster.yml
+++ b/.github/workflows/onPushMaster.yml
@@ -13,13 +13,12 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.16.1'
-      - uses: actions/angular-github-actions
       - name: Install
         run: npm install
       - name: Build
         run: npm run buildProduction
       - name: Test
-        run: ng test --watch=false --browsers=ChromeHeadless
+        run: npm test -- --watch=false --browsers=ChromeHeadless
 
     - name: Deploy to Wildfly
       run: mvn wildfly:deploy "-DwfHost=${{ secrets.wildfly_hostname }}" "-DwfPort=${{ secrets.wildfly_port }}" "-DwfUsername=${{ secrets.wildfly_username }}" "-DwfPassword=${{ secrets.wildfly_password }}"
