--- a/.github/workflows/onPush.yml
+++ b/.github/workflows/onPush.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Build
         run: npm run buildProduction
       - name: Test
-        run: ng test -- --watch=false --browsers=ChromeHeadless
+        run: npm test -- --watch=false --browsers=ChromeHeadless
