TMM-109 Workflow deploy (#4)
* work

* wildfly

* workflow master&onpush

* repair actions npm test

* typo

* tabs

* revert deleted lines

Co-authored-by: KanekiSenapi <v.kaneki.senpai@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
   <description>A system to manage game tournaments.</description>
   <packaging>war</packaging>
 
+  <properties>
+    <wfHost></wfHost>
+    <wfPort></wfPort>
+    <wfUsername></wfUsername>
+    <wfPassword></wfPassword>
+  </properties>
+
   <build>
     <finalName>tmm-web</finalName>
     <plugins>
@@ -59,6 +66,12 @@
         <groupId>org.wildfly.plugins</groupId>
         <artifactId>wildfly-maven-plugin</artifactId>
         <version>1.0.1.Final</version>
+        <configuration>
+          <hostname>${wfHost}</hostname>
+          <port>${wfPort}</port>
+          <username>${wfUsername}</username>
+          <password>${wfPassword}</password>
+        </configuration>
       </plugin>
     </plugins>
   </build>
