--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+package-lock.json
 
 # compiled output
 /dist
 /tmp
 /out-tsc
 /src/main/webapp/resources/
-
 # Only exists if Bazel was run
 /bazel-out
 
