upgrade undertow-handlers.conf

--- a/src/main/webapp/WEB-INF/undertow-handlers.conf
+++ b/src/main/webapp/WEB-INF/undertow-handlers.conf
@@ -1,3 +1,15 @@
 path-prefix('/api') -> done
-path-suffix('.js') -> done
+path-prefix('/assets') -> done;
+
+regex('(.*).js') -> done;
+regex('(.*).map') -> done;
+
+regex('(.*).svg') -> done;
+regex('(.*).png') -> done;
+
+regex('(.*).eot') -> done;
+regex('(.*).woff2') -> done;
+
+regex('(.*).html') -> done;
+
 path-prefix('/') -> rewrite('/')
