:bug: Undertow handlers fix css

--- a/src/main/webapp/WEB-INF/undertow-handlers.conf
+++ b/src/main/webapp/WEB-INF/undertow-handlers.conf
@@ -2,10 +2,14 @@ path-prefix('/api') -> done
 path-prefix('/assets') -> done;
 
 regex('(.*).js') -> done;
+regex('(.*).css') -> done;
 regex('(.*).map') -> done;
+regex('(.*).ico') -> done;
 
 regex('(.*).svg') -> done;
 regex('(.*).png') -> done;
+regex('(.*).jpg') -> done;
+regex('(.*).jpeg') -> done;
 
 regex('(.*).eot') -> done;
 regex('(.*).woff2') -> done;
